# ptimetracker

./: .gitignore  Attributions  CMakeLists.txt  Makefile  README  TODO  install_deps.sh  ptimetracker.cabal
doc/: api_notes.txt
include/: APIState.h  Util.h  exec-notify.h  proc_functions.hpp
libtimetracker/: CMakeLists.txt  alt-read-file.diff  read-using-sgetn.diff  stashed.diff
libtimetracker/include/: APIState.h  Util.h  proc_functions.hpp
libtimetracker/src/: APIState.cpp  Util.cpp  exec-notify.c  main.c  proc_functions.cpp  register.cpp
libtimetracker/test/: test_procmatcher.cpp
libtimetracker/test/root/: root_tests.cpp
src/: APIState.cpp  Main.hs  Util.cpp  exec-notify.c  main.c  main.cpp  proc_functions.cpp  register.cpp
src/TimeTracker/: Callbacks.hs  Config.hs  FFI.hs  Interface.hs  PidCache.hs  ProcEventType.hs  Types.hs
src/TimeTracker/Config/: ConfigTypes.hs  Options.hs
src/TimeTracker/IO/: Database.hs  Queries.hs  Ticks.hs
test/: test_procmatcher.cpp
test/root/: root_tests.cpp
