name:                ptimetracker

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
license:             GPL

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Thomas Jakway

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          tjakway@nyu.edu

-- A copyright notice.
-- copyright:           

category:            System

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

Library 

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns -Werror=missing-fields
  build-depends:       base >= 4.7, mtl, HDBC, HDBC-sqlite3, HDBC-session, safe, containers, unix, hslogger
  
  exposed-modules: TimeTracker.FFI, TimeTracker.Types, TimeTracker.Interface, TimeTracker.IO.Database,
                   TimeTracker.Config.ConfigTypes, TimeTracker.Config.Options, TimeTracker.PidCache, TimeTracker.IO.Ticks
  extra-libraries: stdc++ timetracker

Executable ptimetracker
  hs-source-dirs:      src
  default-language:    Haskell2010
  main-is:             Main.hs
  ghc-options:         -Wall -Wcompat -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns -Werror=missing-fields
  build-depends:       base >= 4.7, ptimetracker, mtl, HDBC, HDBC-sqlite3, HDBC-session, safe, containers, unix, hslogger

  extra-libraries: stdc++ timetracker
